# Sonic-CD-11-Decompilation

./: CMakeLists.txt
SonicCDDecomp/: CMakeLists.txt
cmake/modules/: FindOgg.cmake  FindTheora.cmake  FindVorbis.cmake
dependencies/all/theoraplay/: CMakeLists.txt
